# LanguageClassifier

./: .gitignore  LangClass.hs  LanguageClassifier.cabal  README.md  br.lmod  cy.lmod  de.lmod  en.lmod  es.lmod  et.lmod  eu.lmod  fi.lmod  fr.lmod  ka.lmod  pt.lmod  sv.lmod
