name:                LanguageClassifier
version:             0.1.0.0
synopsis:            Language Classification based on Bigram Model Similarity
license:             PublicDomain
license-file:        LICENSE
author:              M. G. Meier
maintainer:          mgoremeier@gmail.com

category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable LanguageClassifier
  main-is:             LangClass.hs

  other-extensions:    DeriveGeneric, LambdaCase

  build-depends:       base >=4.7 && <5, 
                       text >=1.1 && <1.2, 
                       bytestring >=0.10 && <0.11,
                       binary >=0.7 && <0.8,
                       directory >=1.2 && <1.3,
                       transformers >=0.2 && <0.5,
                       haskeline >=0.7 && <0.8

  default-language:    Haskell2010
